--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
     compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.11.12.RELEASE'
+    // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf
+    compile group: 'org.thymeleaf', name: 'thymeleaf', version: '2.0.16'
+
 }
